// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fork 1`] = `
Object {
  "f": Array [
    Array [
      "type",
      "ITEM",
    ],
    Array [
      "value",
      Object {
        "f": Array [
          Array [
            "type",
            "BAR",
          ],
        ],
      },
    ],
    Array [
      "key",
      1,
    ],
  ],
}
`;

exports[`fork 2`] = `
Object {
  "f": Array [
    Array [
      "type",
      "ITEM",
    ],
    Array [
      "value",
      Object {
        "f": Array [
          Array [
            "type",
            "BAR",
          ],
        ],
      },
    ],
    Array [
      "key",
      2,
    ],
  ],
}
`;

exports[`fork 3`] = `
Object {
  "f": Array [
    Array [
      "type",
      "ITEM",
    ],
    Array [
      "value",
      Object {
        "f": Array [
          Array [
            "type",
            "BAR2",
          ],
        ],
      },
    ],
    Array [
      "key",
      2,
    ],
  ],
}
`;

exports[`fork 4`] = `
Object {
  "f": Array [
    Array [
      "type",
      "ITEM",
    ],
    Array [
      "value",
      Object {
        "f": Array [
          Array [
            "type",
            "DELETE",
          ],
        ],
      },
    ],
    Array [
      "key",
      1,
    ],
  ],
}
`;

exports[`fork 5`] = `
Object {
  "f": Array [
    Array [
      "type",
      "ITEM",
    ],
    Array [
      "value",
      Object {
        "f": Array [
          Array [
            "type",
            "BAR",
          ],
        ],
      },
    ],
    Array [
      "key",
      2,
    ],
  ],
}
`;

exports[`fork 6`] = `
Object {
  "f": Array [
    Array [
      "type",
      "ITEM",
    ],
    Array [
      "value",
      Object {
        "f": Array [
          Array [
            "type",
            "BAR2",
          ],
        ],
      },
    ],
    Array [
      "key",
      2,
    ],
  ],
}
`;

exports[`fork 7`] = `
Object {
  "f": Array [
    Array [
      "type",
      "ITEM",
    ],
    Array [
      "value",
      Object {
        "f": Array [
          Array [
            "type",
            "DELETE",
          ],
        ],
      },
    ],
    Array [
      "key",
      2,
    ],
  ],
}
`;
